# WaveTrace

./: .gitignore  Brewfile  CMakeLists.txt  Documentation.md  README.md  collect_baseline.py  collect_camera.py  collect_count.py  collect_presence.py  collect_weapon.py  health_monitor.py  mesh_verify.py  ntp_server.py  package-lock.json  projectProgress.md  pyproject.toml  run_count.py  run_live_mesh.py  run_weapon.py  weapon_experiments.py  weapon_litmus.py
experiments/: weapon_experiments.py  weapon_litmus.py
firmware/: .gitignore  README.md  flash.sh
firmware/esp32_node/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32_node/main/: CMakeLists.txt  config.h.example  idf_component.yml  main.cpp
firmware/esp32_rx/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32_rx/main/: CMakeLists.txt  config.h.example  main.cpp
firmware/esp32_tx/: CMakeLists.txt  sdkconfig.defaults
firmware/pi/: README.md  camera_stream.py  config.py  illuminate.sh  nexmon_reader.py  pi5_csi_node.py  publisher.py  requirements.txt  setup_nexmon.sh  start_capture.sh
fixtures/: SyntheticCsi.py  SyntheticRecording.py
scripts/: README.md  collect_baseline.py  collect_camera.py  collect_count.py  collect_weapon.py  health_monitor.py  mesh_verify.py  ntp_server.py  run_count.py  run_live_mesh.py  run_weapon.py
src/: Bindings.cpp  README.md
src/core/: CsiFrame.hpp  Errors.hpp  README.md  Types.hpp
src/hardware/: FrameParser.hpp  NodeAggregator.hpp  README.md
src/signal/: Features.hpp  GainLock.hpp  Preprocess.hpp  PresenceSegment.hpp  README.md  Spectrogram.hpp  SubcarrierSelect.hpp
src/util/: Fft.hpp  README.md  RingBuffer.hpp
tests/: README.md  TestCalibration.py  TestCir.py  TestCore.py  TestCount.py  TestFeatures.py  TestFrameParser.py  TestFrontendExt.py  TestGainLock.py  TestGroundTruth.py  TestGuard.py  TestLinkVoter.py  TestLocalize.py  TestMeshLinks.py  TestMultiNode.py  TestNodeWeights.py  TestPiPublisher.py  TestPipeline.py  TestPreprocess.py  TestPresenceSegment.py  TestRecognition.py  TestRegression.py  TestResample.py  TestSegmentationLabeler.py  TestSpectrogram.py  TestSubcarrierSelect.py  TestUdpSource.py  TestVisionLabeler.py  TestWeapon.py  TestWeaponBgSubtract.py  TestWeaponConfound.py  TestWeaponLitmus.py  TestWeaponPerLink.py  TestWeaponPipeline.py  TestWebcam.py  conftest.py
wavetrace/: Calibration.py  Cli.py  Config.py  Frontend.py  Localize.py  README.md  Source.py  __init__.py  _wavetrace.pyi
wavetrace/diagnostics/: README.md  Telemetry.py  __init__.py
wavetrace/groundtruth/: Align.py  CameraLabeler.py  DatasetBuilder.py  README.md  Webcam.py  __init__.py
wavetrace/output/: Publisher.py  __init__.py
wavetrace/recognition/: Adapt.py  Cir.py  Evaluate.py  Explain.py  Fusion.py  Heatmap.py  Infer.py  Link.py  Model.py  Occupancy.py  README.md  Resample.py  Stack.py  Train.py  Vote.py  Weapon.py  __init__.py
web/: README.md  WsPublisher.py  app.py  device_ctl.py  foxglove.py  streamer.py
web/ui/: README.md  package-lock.json  package.json  vite.config.ts
(+29 files in other folders)
